# ralsei-py

./: .buildinfo  .gitignore  404.html  README.md  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  searchindex.js
.doctrees/: index.doctree
.doctrees/apidocs/: index.doctree
.doctrees/guides/: index.doctree  pipelines.doctree  sql_templates.doctree
.github/find-latest-tag/: action.yml
.github/install-poetry-dependencies/: action.yml
.github/setup-action/: action.yml
.github/workflows/: publish-docs.yml  publish-package.yml  publish.yml  run-tests.yml
.workflows/: run-tests.yml
_sources/: index.rst.txt
_sources/apidocs/: index.rst.txt
_sources/guides/: application.rst.txt
_static/css/: fix-summary.css  index.css
apidocs/: index.html
apidocs/ralsei/: ralsei.app.html  ralsei.connection.create.html  ralsei.connection.ext.html  ralsei.connection.html  ralsei.connection.jinja.html  ralsei.console.html  ralsei.contextmanagers.html  ralsei.db_actions.html  ralsei.dialect.html  ralsei.graph.dag.html  ralsei.graph.error.html  ralsei.graph.html  ralsei.graph.outputof.html  ralsei.graph.path.html  ralsei.graph.pipeline.html  ralsei.graph.resolver_context.html  ralsei.graph.sequence.html  ralsei.html  ralsei.jinja.adapter.html  ralsei.jinja.environment.html  ralsei.jinja.html  ralsei.jinja.interface.html  ralsei.jinja.wrapper.html  ralsei.task.add_columns.html  ralsei.task.add_columns_sql.html  ralsei.task.base.html  ralsei.task.context.html  ralsei.task.create_table.html  ralsei.task.create_table_sql.html  ralsei.task.html  ralsei.task.map_to_new_columns.html  ralsei.task.map_to_new_table.html  ralsei.task.rowcontext.html  ralsei.types.column.html  ralsei.types.html  (+5 more)
css/: mkdocstrings.css
docs/: conf.py  gen_ref_pages.py  index.md  index.rst
guides/: application.html  index.html  pipelines.html  sql_templates.html  tasks.html
ralsei/: __init__.py  _pipeline.py  actions.py  app.py  checks.py  cli.py  connection.py  console.py  context.py  contextmanagers.py  cursor_factory.py  db_actions.py  dialect.py  dict_utils.py  injector.py  jinjasql.py  map_fn.py  params.py  pipeline.py  plugins.py  preprocess.py  reader.py  renderer.py  resolver.py  runnable.py  runner.py  sql_adapter.py  sql_description.py  templates.py  utils.py  viz.py  wrappers.py
search/: search_index.json
tests/: conftest.py  db_helper.py  error.py  test_add_columns.py  test_create_table.py  test_dialect.py  test_graph.py  test_map_to_new_columns.py  test_map_to_new_table.py  test_pipeline.py
(+212 files in other folders)
